--- a/apps/web/src/pages/blog/page/[page].astro
+++ b/apps/web/src/pages/blog/page/[page].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 import BlogArchive from "../../../components/blog/BlogArchive.astro";
 import { getCollection } from "astro:content";
@@ -59,4 +61,3 @@ const canonical = new URL(`/blog/page/${safePage}/`, SITE_URL).toString();
     urlForPage={urlForPage}
   />
 </BaseLayout>
-
