--- a/apps/web/src/pages/blog/tag/[tag]/page/[page].astro
+++ b/apps/web/src/pages/blog/tag/[tag]/page/[page].astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import BaseLayout from "../../../../../layouts/BaseLayout.astro";
 import BlogArchive from "../../../../../components/blog/BlogArchive.astro";
 import { getCollection } from "astro:content";
@@ -74,4 +76,3 @@ const canonical = new URL(`/blog/tag/${encodeURIComponent(selectedTag)}/page/${s
     urlForPage={urlForPage}
   />
 </BaseLayout>
-
