--- a/apps/web/src/pages/blog/tags/index.astro
+++ b/apps/web/src/pages/blog/tags/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 import { SITE_URL } from "../../../lib/constants/config";
@@ -52,4 +54,3 @@ const canonical = new URL("/blog/tags/", SITE_URL).toString();
     </div>
   </div>
 </BaseLayout>
-
