--- a/apps/web/src/pages/showcase/[slug].astro
+++ b/apps/web/src/pages/showcase/[slug].astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true;
+export const prerender = false;
 
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import { POCKETBASE_URL, SITE_URL } from "../../lib/constants/config";
