--- a/apps/web/src/pages/showcase/index.astro
+++ b/apps/web/src/pages/showcase/index.astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true;
+export const prerender = false;
 
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import ShowcaseBrowser from "../../components/showcase/ShowcaseBrowser";
